Since 0.6.3
-----------
- implemented `FieldType` and `FieldEq` for `url::Url`

Notes for publishing
--------------------
- don't forget to bump and publish rorm-macro!